# aican

./: .gitattributes  .gitignore  .mcp.json  LICENSE  README.md  README_zh.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/superpowers/plans/: 2026-03-10-product-release.md
docs/superpowers/specs/: 2026-03-10-product-release-design.md
skills/can-card/: SKILL.md
src/aican/: __init__.py  __main__.py  can_manager.py  server.py
tests/: test_usbcan_2e_u.py
zlgcan/: CANDTU-x00UR系列.py  CANET系列.py  CANFDNET系列.py  PCIE-CANFD系列.py  USBCAN-I系列.py  USBCAN-xE-U系列.py  USBCANFD系列.py  readme.txt  zlgcan.py
zlgcan/kerneldlls/devices_property/: usbcan-2e-u.xml
