[project]
name = "aican"
version = "0.1.0"
description = "AICAN - Control ZLG CAN devices with natural language"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
authors = [{ name = "Cedric Gao" }]
keywords = ["can-bus", "zlg", "automotive", "mcp"]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.0.0,<2",
    "cantools>=39.0.0,<40",
]

[project.urls]
Homepage = "https://github.com/gaoguobin/aican"
Repository = "https://github.com/gaoguobin/aican"

[project.scripts]
aican = "aican.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aican"]
